# lessons-project

./: db.sqlite3  pyproject.toml
src/products/: models.py  serializers.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_initial.py  0003_alter_product_id.py  0004_rename_user_id_allowedproducts_user.py  0005_alter_watchedlessons_unique_together.py
src/src/: settings.py  urls.py
src/users/: models.py  urls.py
src/users/migrations/: 0001_initial.py
